--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /bootstrap/compiled.php
+/bootstrap/environment.php
 /vendor
 composer.phar
 composer.lock
@@ -6,3 +7,5 @@ composer.lock
 .env.php
 .DS_Store
 Thumbs.db
+.idea
+_ide_helper.php
